--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Smile Spotters</a>
+      <a class="navbar-brand" width="100px" href="#"><img src="/images/logo.jpg" width="50px"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
